--- a/calculator.html
+++ b/calculator.html
@@ -117,7 +117,6 @@
           <div>
             <a
               class="bg-[#FF6D43] py-[0.938vw] px-[2.448vw] text-[#EEECE8] text-[0.729vw] rounded-full cursor-pointer flex items-center"
-              href="calculator.html"
             >
               <span>Make a free quote</span>
 
@@ -247,63 +246,40 @@
       </header>
       <!-- header ends -->
 
-      <!-- here started the service hero section  -->
+      <!-- here started the hero section  -->
       <section
-        class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem] pt-12 md:pt-0"
+        class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem]"
       >
-        <div class="aspect-[430/450] md:aspect-[1920/800] w-full">
-          <div class="w-full h-full relative overflow-hidden">
-            <img
-              class="w-full h-full md:h-auto"
-              src="./asset/img/demolation_service_img.jpg"
-              alt="flooring-services"
-            />
-            <!-- Overlay div -->
-            <div
-              class="w-full h-full overlay-bg top-0 bottom-0 left-0 right-0 absolute z-10 hidden md:block"
-            ></div>
-
-            <div
-              class="w-full h-full overlay-bg-dark top-0 bottom-0 left-0 right-0 absolute z-10 block md:hidden"
-            ></div>
-
-            <!-- Content -->
-            <div
-              class="absolute top-20 left-7 md:top-[38%] md:left-[10.417vw] text-white text-left z-20 overflow-hidden md:max-w-[30vw] px-6"
+        <div
+          class="aspect-[430/450] md:aspect-[1720/702] container-general flex flex-col justify-center items-center"
+        >
+          <div
+            class="calculator-hero w-full flex flex-col justify-center items-center pt-10"
+          >
+            <h1
+              class="text-[7vw] md:text-[3vw] text-center leading-[8.372vw] md:leading-[3vw] text-[#FF6D43] pt-[13.953vw] md:pt-0 mx-[10vw] md:mx-0"
             >
-              <h1
-                class="text-[8.372vw] md:text-[2.5vw] text-center md:text-left leading-[8.372vw] md:leading-[3vw] text-[#EEECE8]"
+              The Renoexpert Renovation Calculator
+            </h1>
+            <p
+              class="text-[4.186vw] md:text-[0.938vw] text-center my-[10vw] md:my-[2.656vw] text-[#291E18CC] px-[10vw] md:px-[9.791vw]"
+            >
+              Get a detailed estimate of renovation costs based on the nature
+              and scope of work you wish to get done. Simply select your
+              preferred options and we’ll do the math for you!
+            </p>
+            <div class="text-center md:flex md:gap-4 my-[10.93vw] md:my-0">
+              <a
+                class="bg-[#FF6D43] py-[0.938vw] px-[2.448vw] text-[#EEECE8] text-[0.729vw] rounded-full cursor-pointer flex items-center z-30"
+                href="http://calculator.sgrenoexpert.com/"
               >
-                Demolition
-              </h1>
-              <p
-                class="text[4.186vw] md:text-[0.938vw] text-center md:text-left leading-[5.023vw] md:leading-[1.458vw] text-[#EEECE8] pb-[2.813vw] pt-[1.042vw]"
-              >
-                Our demolition services clear the path for your vision, ensuring
-                a meticulous process that paves the way for the transformation
-                of your space.
-              </p>
-
-              <div
-                class="text-center flex flex-col-reverse md:flex-row justify-center md:justify-start gap-[1.094vw] items-center my-[10.93vw] md:my-0"
-              >
-                <a
-                  class="bg-[#FF6D43] py-[4.186vw] px-[4.93vw] md:py-[1.823vw] md:px-[1.979vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
-                  href="#projects"
-                >
-                  <img src="./asset/icons/painting_service.png" alt="" />
-                </a>
-                <span
-                  class="text-center text-[4.651vw] md:text-[0.833vw] leading-[5.581vw] md:leading-[1vw]"
-                >
-                  PROJECTS
-                </span>
-              </div>
+                <span>Get Started</span>
+              </a>
             </div>
           </div>
         </div>
       </section>
-      <!-- here ended the service hero section  -->
+      <!-- here ended the hero section  -->
 
       <!-- google review section start -->
       <div class="w-full bg-[#EEECE8] border-[#BEB8AE] border-b-[0.1rem]">
@@ -1870,193 +1846,6 @@
       </div>
       <!-- google review section end -->
 
-      <!-- project section here start  -->
-      <div class="w-full bg-black" id="projects">
-        <div
-          class="overflow-hidden text-center pb-[8vw] pt-[8vw] md:pt-[6vw] px-[10vw] md:px-[30.208vw]"
-        >
-          <h2
-            class="text-[8.372vw] md:text-[2.292vw] text-[#EEECE8] mb-4 leading-[12.056vw] md:leading-[2.7vw]"
-          >
-            OUR PROJECTS
-          </h2>
-          <p
-            class="mb-8 text-[#EEECE8] text-[4.186vw] md:text-[0.938vw] leading-[6.512vw] md:leading-[1.458vw]"
-          >
-            We released more than 150 commercial and private projects all around
-            the world, providing our clients with custom solutions in stylish,
-            functional, and well-thought-out designs.
-          </p>
-        </div>
-
-        <div
-          class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-center items-center px-[2.083vw]"
-        >
-          <div class="w-full cursor-pointer relative outer-div">
-            <div class="overlay"></div>
-            <img
-              src="./asset/img/flooring_project_img1.png"
-              alt="Allurei Manson SG"
-              class="w-full"
-            />
-            <div class="absolute bottom-10 left-10 md:opacity-0 inner-div">
-              <p
-                class="text-[5vw] md:text-[2.292vw] text-[#fff] leading-[4vw] md:leading-[2.7vw]"
-              >
-                Allurei Manson SG
-              </p>
-              <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
-                <p
-                  class="text-[2.326vw] md:text-[0.677vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#fff]"
-                >
-                  Midney State 7440
-                </p>
-
-                <img
-                  class="img-fluid"
-                  src="./asset/img/date_pointer_bg.png"
-                  alt="date_pointer_bg"
-                />
-                <p
-                  class="text-[2.326vw] md:text-[0.677vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
-                >
-                  24 December 2023
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="w-full cursor-pointer">
-            <img
-              src="./asset/img/flooring_project_img2.png"
-              alt="Project Image"
-              class="w-full"
-            />
-          </div>
-          <div class="md:col-span-2 w-full cursor-pointer">
-            <img
-              src="./asset/img/flooring_project_img3.png"
-              alt="Project Image"
-              class="w-full"
-            />
-          </div>
-        </div>
-      </div>
-
-      <!-- project section here end -->
-
-      <!-- renovate your home start  -->
-      <section
-        class="ready-to-renovate px-[10vw] py-[16.977vw] md:p-6 min-h-[29.167vw] flex justify-center items-center"
-      >
-        <div
-          class="flex flex-col gap-3 justify-center items-center container-general"
-        >
-          <h1
-            class="text-white text-[7.907vw] md:text-[3.125vw] font-normal text-center md:text-left md:leading-[1.458vw] leading-[9.488vw] z-10"
-          >
-            Ready to renovate your home?
-          </h1>
-          <p
-            class="text-white text-[3.256vw] md:text-[0.938vw] font-normal pt-[3.512vw] pb-[11.163vw] px-[5.116vw] md:pt-[1.4vw] md:pb-[1.927vw] md:px-0 leading-[3.907vw] md:leading-[1.125vw] md:w-[35.521vw] text-center z-10"
-          >
-            Drop us a line to discuss how Renoexpert can help you to organize
-            your dream Home.
-          </p>
-          <a
-            class="bg-[#FF6D43] py-[4.186vw] px-[10.93vw] md:py-[0.938vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center z-10"
-          >
-            <span>Make a free quote</span>
-
-            <svg
-              class="ml-[1.042vw] inline"
-              width="54"
-              height="7"
-              viewBox="0 0 54 7"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
-                fill="#EEECE8"
-              />
-            </svg>
-          </a>
-        </div>
-      </section>
-      <!-- renovate your home end -->
-
-      <!-- free quote section start here  -->
-      <section class="container-exceptional md:flex justify-between">
-        <div class="flex items-center md:w-[41.667vw] pt-[8vw] md:pt-0">
-          <div
-            class="bg-[#fff] md:flex md:flex-col md:gap-y-[2.656vw] md:w-[41.667vw]"
-          >
-            <h1
-              class="text-gray-900 text-center md:text-left text-[6.512vw] md:text-[2.396vw] py-4 not-italic font-normal leading-[7.814vw] md:leading-5"
-            >
-              Request Your Free Reno Quote!
-            </h1>
-            <p
-              class="text-gray-900 px-[10vw] md:px-0 text-[3.256vw] md:text-[0.938vw] not-italic font-normal leading-[3.907vw] text-center md:text-left lg:leading-7 md:leading-6"
-            >
-              Take the first step towards transforming your space by requesting
-              a free, no-obligation renovation quote. Simply fill out the form
-              below, and let's start the conversation.
-            </p>
-            <div class="text-center md:flex md:gap-2 my-[10.93vw] md:my-0">
-              <a
-                class="bg-[#FF6D43] py-[4.186vw] px-[10.93vw] md:py-[0.938vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
-              >
-                <span>Make a free quote</span>
-
-                <svg
-                  class="ml-[1.042vw] inline"
-                  width="54"
-                  height="7"
-                  viewBox="0 0 54 7"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
-                    fill="#EEECE8"
-                  />
-                </svg>
-              </a>
-              <a
-                class="border-[#0a050533] border py-[0.938vw] px-[2.448vw] text-[#291E18] text-[0.729vw] rounded-full cursor-pointer md:inline-block items-center ml-[2.083vw] hidden"
-              >
-                <span>Contact Us</span>
-
-                <svg
-                  class="ml-[1.042vw] inline"
-                  width="54"
-                  height="7"
-                  viewBox="0 0 54 7"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
-                    fill="#291E18"
-                  />
-                </svg>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div
-          class="bg-[#C6E4EE] w-[100vw] aspect-[430/438] md:w-[39.583vw] flex justify-center pt-[2.813vw]"
-        >
-          <img
-            class="w-[62.093vw] aspect-[267/374] md:w-[26.458vw] md:h-full"
-            src="./asset/img/MDL 1.png"
-            alt="man image"
-          />
-        </div>
-      </section>
-      <!-- free quote section end here  -->
-
       <!-- blog section start  -->
       <section class="bg-black py-[8.333vw]">
         <div
@@ -2079,7 +1868,7 @@
                 </svg>
               </span>
               <h1
-                class="text-[#EEECE8] text-center md:text-left not-italic text-[6.512vw] md:text-[2.24vw] font-normal md:leading-10 leading-7"
+                class="text-[#EEECE8] text-center md:text-left not-italic text-[6.512vw] md:text-[2.24vw] font-normal md:leading-10 leading-[7.814vw]"
               >
                 Explore Our <br />
                 <span class="text-[#FF6D43]">Renovation Blogs</span>
@@ -2100,7 +1889,7 @@
           </div>
           <div>
             <div
-              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center border-b-[0.1px] border-[#BEB8AE] pb-[4.167vw]"
+              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center border-b-[0.1px] border-[#BEB8AE] pb-[15vw] md:pb-[4.167vw]"
             >
               <img
                 class="img-fluid mx-[10vw] md:mx-0"
@@ -2116,7 +1905,7 @@
                   Creative Ideas for Small Spaces
                 </h3>
                 <p
-                  class="text-[2.791vw] md:text-[0.729vw] font-normal md:leading-5 leading-3 tracking-normal text-left text-[#EEECE8] md:w-[18.75vw]"
+                  class="text-[2.791vw] md:text-[0.729vw] font-normal md:leading-5 leading-[3.349vw] tracking-normal text-left text-[#EEECE8] md:w-[18.75vw]"
                 >
                   Discover innovative ways to maximize space without
                   compromising on style.
@@ -2137,7 +1926,7 @@
             </div>
             <!-- =================================================== -->
             <div
-              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center pt-[4.167vw]"
+              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center pt-[13.5vw] md:pt-[4.167vw]"
             >
               <img
                 class="img-fluid mx-[10vw] md:mx-0"
@@ -2153,7 +1942,7 @@
                   The Colors Shaping Home Interiors in 2024
                 </h3>
                 <p
-                  class="text-[2.791vw] md:text-[0.729vw] font-normal md:leading-5 leading-3 tracking-normal text-left text-[#EEECE8] md:w-[18.75vw]"
+                  class="text-[2.791vw] md:text-[0.729vw] font-normal md:leading-5 leading-[3.349vw] tracking-normal text-left text-[#EEECE8] md:w-[18.75vw]"
                 >
                   Stay ahead of the curve with a glimpse into the hues and
                   palettes that are making waves in interior design this year.
@@ -2174,7 +1963,7 @@
             </div>
           </div>
 
-          <div class="block md:hidden text-center my-[10.93vw]">
+          <div class="block md:hidden text-center my-[10vw]">
             <a
               class="border-[#BEB8AE] border py-[4.186vw] px-[6.93vw] md:py-[0.938vw] md:px-[2.448vw] text-white text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
             >
@@ -2284,15 +2073,14 @@
                 accept it.
               </p>
             </div>
-
             <div>
               <a
-                class="bg-[#FF6D43] py[14.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] leading-[4.651vw] rounded-full cursor-pointer flex items-center justify-between md:w-[39.063vw] mx-[10.233vw] md:mx-0 h-[12.791vw] md:h-[2.865vw]"
+                class="bg-[#FF6D43] py[14.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] leading-[4.651vw] rounded-full cursor-pointer flex items-center md:w-[39.063vw] mx-[10.233vw] md:mx-0 h-[12.791vw] md:h-[2.865vw]"
               >
                 <span>Drop a message</span>
 
                 <svg
-                  class="hidden md:block"
+                  class="ml-[1.042vw] hidden md:block"
                   width="273"
                   height="7"
                   viewBox="0 0 273 7"
@@ -2547,7 +2335,6 @@
       <!-- mobile footer section end -->
     </div>
 
-    <!-- javascript file link  -->
     <script src="./asset/js/glider.js"></script>
     <script src="./asset/js/script.js"></script>
     <script src="./asset/js/slider.js"></script>
