--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
           <div>
             <a
               class="bg-[#FF6D43] py-[0.938vw] px-[2.448vw] text-[#EEECE8] text-[0.729vw] rounded-full cursor-pointer flex items-center"
+              href="calculator.html"
             >
               <span>Make a free quote</span>
 
@@ -1902,8 +1903,9 @@
               class="md:w-[37.917vw] w-[90%] mx-auto md:aspect-[729/450] md:flex mb-[6.047vw] md:mb-0"
             >
               <img
-                class="md:hidden w-full md:h-0"
-                src="asset/img/service_paint_mobile.png"
+                class="md:hidden w-full md:h-0 lazy"
+                data-src="asset/img/service_paint_mobile.png"
+                src="asset/img/service_demolition.png"
                 alt="painting-services"
               />
               <div
@@ -2501,8 +2503,8 @@
         >
           <img
             class="w-[62.093vw] aspect-[267/374] md:w-[26.458vw] md:h-full lazy"
-            data-src="./asset/img/blog_img1.png"
-            src="./asset/img/MDL 1.png"
+            data-src="./asset/img/MDL 1.png"
+            src="./asset/img/lazy/MDL 1-min.png"
             alt="man image"
           />
         </div>
@@ -3066,8 +3068,9 @@
             class="r-side bg-[#c6e4ee] md:flex justify-end items-center w-full hidden"
           >
             <img
-              class="px-[6.667vw] pt-[5vw] img-fluid"
-              src="./asset/img/man_image.png"
+              class="px-[6.667vw] pt-[5vw] lazy"
+              data-src="./asset/img//man_image.png"
+              src="./asset/img/lazyman_image-min.png"
               alt="man image"
             />
           </div>
