--- a/masonary-services.html
+++ b/masonary-services.html
@@ -117,6 +117,7 @@
           <div>
             <a
               class="bg-[#FF6D43] py-[0.938vw] px-[2.448vw] text-[#EEECE8] text-[0.729vw] rounded-full cursor-pointer flex items-center"
+              href="calculator.html"
             >
               <span>Make a free quote</span>
 
