--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="/dist/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="/asset/css/style.css" />
     <title>Reno Expert</title>
@@ -17,7 +18,7 @@
   </head>
 
   <body>
-    <div class="wrapper relative">
+    <div class="wrapper relative overflow-hidden">
       <!-- header start  -->
       <header
         class="header_wrapper aspect-[1840/103] flex items-center w-full box-border bg-[#EEECE8] md:px-[2.083vw] border-b-[0.1rem] border-[#BEB8AE] fixed z-50 hover:bg-white duration-300"
@@ -258,6 +259,7 @@
             class="flex flex-col md:flex-row md:h-full md:w-full justify-center md:justify-between"
           >
             <div
+            data-aos="fade-right"
               class="w-full md:w-[35%] flex justify-center md:justify-end items-center"
             >
               <div class="w-full md:w-[37.6875rem]">
@@ -297,6 +299,7 @@
               </div>
             </div>
             <div
+            data-aos="fade-left"
               class="w-full aspect-[430/438] md:h-full flex md:w-[63%] justify-end items-center"
             >
               <!-- <img class="" src="/asset/img/3d floor plan 3.png" alt="" srcset="" /> -->
@@ -309,7 +312,7 @@
 
       <!-- google review section start -->
       <div class="w-full bg-[#EEECE8] border-[#BEB8AE] border-b-[0.1rem]">
-        <div class="container-exceptional py-[5vw]">
+        <div data-aos="fade-up" class="container-exceptional py-[5vw]">
           <div class="flex justify-center items-center mt-[16.279vw] md:mt-0">
             <h1 class="text-[6.527vw] md:text-[1.875vw]">
               <span class="text-[#FF6D43]">5.0</span> Rating on
@@ -1889,6 +1892,7 @@
               <circle cx="4" cy="4" r="4" fill="#FF6D43" />
             </svg>
             <h1
+            data-aos="fade-up"
               class="text-[#291E18] text-center text-[6.512vw] md:text-[2.24vw] sm:text-[6.512vw]"
             >
               Our Services
@@ -1900,6 +1904,7 @@
           >
             <!-- here started the single service section  -->
             <div
+            data-aos="fade-right"
               class="md:w-[37.917vw] w-[90%] mx-auto md:aspect-[729/450] md:flex mb-[6.047vw] md:mb-0"
             >
               <img
@@ -1986,6 +1991,7 @@
 
             <!-- here started the single service section  -->
             <div
+            data-aos="fade-left"
               class="md:w-[37.917vw] w-[90%] mx-auto md:aspect-[729/450] md:flex mb-[6.047vw] md:mb-0"
             >
               <img
@@ -2070,6 +2076,7 @@
 
             <!-- here started the single service section  -->
             <div
+            data-aos="fade-right"
               class="md:w-[37.917vw] w-[90%] mx-auto md:aspect-[729/450] md:flex mb-[6.047vw] md:mb-0"
             >
               <img
@@ -2154,6 +2161,7 @@
 
             <!-- here started the single service section  -->
             <div
+            data-aos="fade-left"
               class="md:w-[37.917vw] w-[90%] mx-auto md:aspect-[729/450] md:flex mb-[6.047vw] md:mb-0"
             >
               <img
@@ -2238,6 +2246,7 @@
 
             <!-- here started the single service section  -->
             <div
+            data-aos="fade-right"
               class="md:w-[37.917vw] w-[90%] mx-auto md:aspect-[729/450] md:flex mb-[6.047vw] md:mb-0"
             >
               <img
@@ -2322,6 +2331,7 @@
 
             <!-- here started the single service section  -->
             <div
+            data-aos="fade-left"
               class="md:w-[37.917vw] w-[90%] mx-auto md:aspect-[729/450] md:flex mb-[6.047vw] md:mb-0"
             >
               <img
@@ -2411,7 +2421,7 @@
       <!-- reno work section start  -->
       <section class="renoWork bg-[#EEECE8] w-full py-[15vw] md:pt-[5.365vw]">
         <div class="pb-[10.833vw] md:py-[4vw] container-general">
-          <div class="mb-[4.167vw]">
+          <div data-aos="fade-up" class="mb-[4.167vw]">
             <h1
               class="text-gray-900 text-center not-italic font-normal md:leading-[2.7vw] leading-3 md:text-[2.292vw] text-[6.512vw] md:mb-[1.458vw] mb-[3.488vw]"
             >
@@ -2426,6 +2436,8 @@
           </div>
           <!-- video section start  -->
           <div
+          data-aos="fade-up"
+          data-aos-duration="1500"
             class="videoReno w-full md:w-[63.385vw] h-auto md:h-[29.531vw] mx-auto md:pt-[3vw]"
           >
             <video
@@ -2440,7 +2452,7 @@
 
       <!-- free quote section start here  -->
       <section class="container-exceptional md:flex justify-between">
-        <div class="flex items-center md:w-[41.667vw]">
+        <div data-aos="fade-right" class="flex items-center md:w-[41.667vw]">
           <div
             class="bg-[#fff] md:flex md:flex-col md:gap-y-[2.656vw] md:w-[41.667vw] pt-[11.86vw] md:pt-0"
           >
@@ -2498,7 +2510,8 @@
             </div>
           </div>
         </div>
-        <div
+        <div 
+        data-aos="fade-left"
           class="bg-[#C6E4EE] w-full aspect-[430/438] md:w-[39.583vw] flex justify-center md:justify-end pt-[2.813vw]"
         >
           <img
@@ -2518,7 +2531,7 @@
         <div
           class="container-exceptional flex flex-col md:flex-row justify-between items-center gap-10"
         >
-          <div class="">
+          <div data-aos="fade-right" class="">
             <div
               class="flex gap-9 items-center justify-center md:justify-start"
             >
@@ -2583,7 +2596,7 @@
             </div>
           </div>
 
-          <div class="testimonial-slider w-full md:block">
+          <div data-aos="fade-left" class="testimonial-slider w-full md:block">
             <!-- here started the testimonial single slider  -->
             <div
               class="md:w-[39.583vw] aspect-[760/500] bg-white flex items-center md:items-start flex-col px-[7.442vw] py-[10.465vw] mx-auto md:mx-6 md:py-0 md:px-[3.083vw]"
@@ -2801,7 +2814,8 @@
             </div>
             <!-- here ended the testimonial single slider  -->
           </div>
-          <div class="flex gap-8 my-[6.977vw] md:hidden">
+
+          <div data-aos="fade-up" class="flex gap-8 my-[6.977vw] md:hidden">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="88"
@@ -2846,6 +2860,7 @@
         class="ready-to-renovate px-[10vw] py-[16.977vw] md:p-6 min-h-[29.167vw] flex justify-center items-center"
       >
         <div
+        data-aos="fade-up"
           class="flex flex-col gap-3 justify-center items-center container-general"
         >
           <h1
@@ -2887,6 +2902,7 @@
         class="bg-white min-h[41.667vw] w-full flex flex-col py-[15.116vw] md:py-0 md:pt-28 container-exceptional"
       >
         <div
+        data-aos="fade-up"
           class="flex flex-col justify-center items-center gap-6 mb-[6.667vw]"
         >
           <h1
@@ -2908,7 +2924,7 @@
           class="md:flex m-auto md:items-center text-center md:gap-[6.667vw]"
         >
           <!-- here started the left side  -->
-          <div
+          <div data-aos="fade-right"
             class="flex flex-col gap-[15vw] md:gap-[3.333vw] px-[10vw] md:px-0"
           >
             <!-- div 1 -->
@@ -3064,7 +3080,8 @@
           <!-- here ended the left side  -->
 
           <!-- here started the right side  -->
-          <div
+          <div 
+          data-aos="fade-left"
             class="r-side bg-[#c6e4ee] md:flex justify-end items-center w-full hidden"
           >
             <img
@@ -3084,7 +3101,7 @@
         <div
           class="flex flex-col md:flex-row gap-[3.333vw] justify-center container-general"
         >
-          <div>
+          <div data-aos="fade-right">
             <div
               class="flex gap-[1.875vw] mb-[2.708vw] justify-center md:justify-start"
             >
@@ -3120,7 +3137,7 @@
               <div class="bg-white ml-2 inline-block mb-[0.2rem]"></div>
             </a>
           </div>
-          <div>
+          <div data-aos="fade-left">
             <div
               class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center border-b-[0.1px] border-[#BEB8AE] pb-[15vw] md:pb-[4.167vw]"
             >
@@ -3195,7 +3212,7 @@
             </div>
           </div>
 
-          <div class="block md:hidden text-center my-[10vw]">
+          <div data-aos="fade-up" class="block md:hidden text-center my-[10vw]">
             <a
               class="border-[#BEB8AE] border py-[4.186vw] px-[6.93vw] md:py-[0.938vw] md:px-[2.448vw] text-white text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
             >
@@ -3566,7 +3583,7 @@
 
       <!-- mobile footer section end -->
     </div>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./asset/js/glider.js"></script>
     <script src="./asset/js/script.js"></script>
     <script src="./asset/js/slider.js"></script>
